--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <section class="home">
         <div class="home-img">
-            <img src="product.png" class="one">
+            <img src="https://img.freepik.com/fotos-gratis/fone-de-ouvido-preto-dispositivo-digital_53876-97302.jpg" class="one">
          </div>
 
          <div class="home-text">
