--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <section class="home">
         <div class="home-img">
-            <img src="https://img.freepik.com/fotos-gratis/fone-de-ouvido-preto-dispositivo-digital_53876-97302.jpg" class="one">
+            <img src="https://s.zst.com.br/cms-assets/2022/03/air-pods-pro3.webp" class="one">
          </div>
 
          <div class="home-text">
@@ -45,18 +45,7 @@
 
     </section>
 
-    <div class="main">
-        <div class="row">
-            <li><img src="product1.png" onclick="slider('product.png')"></li>
-        </div>
-
-        <div class="row2">
-            <li><img src="teclado1.png" onclick="slider('teclado.jpg')"></li>
-        </div>
-        <div class="row3">
-            <li><img src="main1.png" onclick="slider('main.jpg')"></li>
-        </div>
-    </div>
+   
 
 
 
