--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <a href="#" class="logo"><i class='bx bx-headphone'></i>EletroMalli</a>
 
         <ul class="navegação">
-            <li><a href="#">Visao Geral</a></li>
+            <li><a href="#">Home</a></li>
             <li><a href="#">especificações</a></li>
             <li><a href="#">sobre</a></li>
-            <li><a href="#">contato</a></li>
+            <li><a href="https://malligson.github.io/curriculum/">Contrate-me</a></li>
         </ul>
 
         <div class="header-icons">
