--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             
             <h1>Bluetooth <br> Fones de Ouvido</h1>
             <h5> a maneira mais inteligente de ouvir</h5>
-            <h3>199.00</h3>
-            <a href="#" class="btn">Compre</a>
+            <h3>$199.00</h3>
+            <a href="#" class="btn">Adicionar no Carrinho</a>
          </div>
 
     </section>
