--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <ul class="navegação">
             <li><a href="#">Home</a></li>
             <li><a href="#">especificações</a></li>
-            <li><a href="#">sobre</a></li>
-            <li><a href="https://malligson.github.io/curriculum/">Contrate-me</a></li>
+            <li><a href="https://www.instagram.com/malligsonn/">contato</a></li>
+            <li><a href="https://malligson.github.io/curriculum/">Curriculo</a></li>
         </ul>
 
         <div class="header-icons">
