--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <a href="#" class="logo"><i class='bx bx-headphone'></i>EletroMalli</a>
 
         <ul class="navegação">
-            <li><a href="#">Home</a></li>
+            <li><a href="https://malligson.github.io/portifolio2/">Inicio</a></li>
         
-            <li><a href="https://www.instagram.com/malligsonn/">contato</a></li>
+            <li><a href="https://wa.me/55048996284777">Contato</a></li>
            
         </ul>
 
